@@ -219,6 +219,37 @@ condCov : :class:`~openturns.CovarianceMatrix`
 
 // ---------------------------------------------------------------------
 
+%feature("docstring") OT::KrigingResult::getConditionalMarginalCovariance
+"Compute the expected covariance of the Gaussian process on a point (or several points).
+
+
+Available usages:
+    getConditionalMarginalCovariance(x)
+
+    getConditionalMarginalCovariance(sampleX)
+
+Parameters
+----------
+x : sequence of float
+    The point :math:`\vect{x}` where the conditional mean of the output has to be evaluated.
+sampleX : 2-d sequence of float
+     The sample :math:`(\vect{\xi}_1, \dots, \vect{\xi}_M)` where the conditional mean of the output has to be evaluated (*M* can be equal to 1).
+
+Returns
+-------
+condCov : :class:`~openturns.CovarianceMatrix`
+    The conditional covariance :math:`\Cov{\vect{Y}(\omega, \vect{x})\, | \,  \cC}` at point :math:`\vect{x}`.
+
+condCov : :class:`~openturns.CovarianceMatrixCollection`
+    The collection of conditional covariance matrices :math:`\Cov{\vect{Y}(\omega, \vect{\xi})\, | \,  \cC}` at
+    each point of the sample :math:`(\vect{\xi}_1, \dots, \vect{\xi}_M)`:
+
+Notes
+-----
+In case input parameter is a of type :class:`~openturns.Sample`, each element of the collection corresponds to the conditional
+covariance with respect to the input learning set (pointwise evaluation of the getConditionalCovariance)."
+// ---------------------------------------------------------------------
+
 %feature("docstring") OT::KrigingResult::getMetaModel
 "Accessor to the metamodel.
 
