@@ -54,6 +54,13 @@ covariancePoint = Point(var.getImplementation())
 theoricalVariance = Point(sampleSize * sampleSize)
 assert_almost_equal(covariancePoint, theoricalVariance, 8.95e-7, 8.95e-7)
 
+# Covariance per marginal & extract variance component
+coll = result.getConditionalMarginalCovariance(X)
+var = [mat[0,0] for mat in coll]
+covarianceColl = Point(var)
+theoricalVariance = Point(sampleSize)
+assert_almost_equal(covarianceColl, theoricalVariance, 1e-14, 1e-14)
+
 # Test 2
 
 # Kriging use case
@@ -108,6 +115,13 @@ var = result.getConditionalCovariance(inputSample)
 covariancePoint = Point(var.getImplementation())
 theoricalVariance = Point(covariancePoint.getSize(), 0.0)
 assert_almost_equal(covariancePoint, theoricalVariance, 7e-7, 7e-7)
+
+# Covariance per marginal & extract variance component
+coll = result.getConditionalMarginalCovariance(inputSample)
+var = [mat[0,0] for mat in coll]
+covarianceColl = Point(var)
+theoricalVariance = Point(len(var))
+assert_almost_equal(covarianceColl, theoricalVariance, 1e-14, 1e-14)
 
 # Estimation
 # rtol & a tol fixed to 1e-1
